--- a/client/src/components/views/LoginPage/css/LoginPage.css
+++ b/client/src/components/views/LoginPage/css/LoginPage.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: linear-gradient(#141e30, #243b55);
+  background: linear-gradient(hsl(0, 0%, 100%), #ffffff);
 }
 
 .login-box {
